# YudaiV3

./: .dockerignore  .env  .env.deploy.template  .env.development.example  .env.example  .env.prod  .env.production.example  .eslintignore  .gitignore  .gitmodules  3-MODE-IMPLEMENTATION-PLAN.md  AGENTS.md  AI_SOLVER_SYSTEM_ARCHITECTURE.md  AUTH_UNIFICATION_PLAN.md  AUTH_UNIFICATION_SUMMARY.md  CHANGELOG-docker-compose.prod.yml.md  CHANGELOG-nginx.prod.conf.md  CHANGELOG.md  CHAT_UI_FLOW_ANALYSIS_REPORT.md  DATABASE_IMPLEMENTATION_PLAN.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_SETUP.md  DEVELOPMENT_WORKFLOW.md  DOCKER.md  Dockerfile  Dockerfile.dev  FileTreeStruct.md  GODADDY_DNS_SETUP.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_SETUP.md  REACT_19_UPGRADE_PLAN.md  README.md  REAL_TIME_IMPLEMENTATION_SUMMARY.md  REAL_TIME_PHASE_TASK_LIST.md  REAL_TIME_STRATEGY.md  SESSION_IMPLEMENTATION_STATUS.md  SESSION_TYPES_UNIFICATION_PLAN.md  SOLVE_ISSUES_IMPLEMENTATION.md  ZUSTAND_MIGRATION_GUIDE.md  (+49 more)
backend/: .dockerignore  API_USAGE_EXAMPLES.md  AUTH_STATE_FIX.md  Dockerfile  Dockerfile.dev  GITHUB_APP_SETUP.md  GITHUB_AUTH_SETUP.md  IMPLEMENTATION_SUMMARY.md  MSWEA_PLANNING_CONTEXT.txt  README_FILE_DEPENDENCIES.md  README_categorizer.md  analyze_oauth_capability.py  api_endpoints.py  check_session_tokens_table.py  debug_oauth.py  docker-compose.defaults.env  download_model.py  env.example  github_issue_processor.py  init_db.py  issue_categorizer.py  issue_processing_results.json  models.py  pyproject.toml  requirements.txt  run_controller.py  run_db_init.py  run_sandbox_server.py  run_server.py  run_tests.py  server.ts  start.sh  system_prompt_templates.py  test_ai_solver_models.py  test_db.py  test_github_app_auth.py  test_oauth.py  test_oauth_user_creation.py  test_solve_router.py  test_solver_core.py  (+3 more)
backend/auth/: README.md  __init__.py  auth_routes.py  auth_utils.py  github_oauth.py  state_manager.py
backend/config/: __init__.py  realtime_flags.py  routes.py
backend/configs/: coder.yaml  tester.yaml
backend/context/: chat_context.py  context_utils.py  facts_and_memories.py
backend/contextServices/: __init__.py  context_routes.py  context_service.py
backend/daifu/: chat_api.py
backend/daifuUserAgent/: ChatOps.py  IssueOps.py  __init__.py  chat_api.py  chat_context.py  context_probe.py  githubAPIFULL.md  githubOps.py  llm_service.py  message_service.py  mode_tools.py  prompt.py  session_routes.py  session_service.py  session_validator.py
backend/db/: Dockerfile  __init__.py  database.py  init.sql  init_db.py  init_python.sh  models.py  sql_helpers.py  test_db.py
backend/docs/: MSWEA_ARENA_STATE_FLOWS.md
backend/github/: __init__.py  github_api.py  github_routes.py  routes.py
backend/gitingest/: scraper_script.py
backend/issueChatServices/: __init__.py  chat_service.py  issue_service.py  session_service.py
backend/models/: CSVMetadata.ts  ProjectConfig.ts  PromptContext.ts
backend/realtime/: __init__.py  agentScriptGen.py  cache_store.py  controller_routes.py  errors.py  lifecycle.py  modal_preflight.py  modal_registry.py  modal_sandbox.py  mode_orchestrator.py  sandbox_artifacts.py  sandbox_exec_broker.py  sandbox_manager.py  sandbox_routes.py  sandbox_transport.py  schemas.py  solve_manager.py  solve_routes.py  solve_sandbox.py  solve_stream_protocol.py  ws_hub.py  ws_protocol.py
backend/repo_processor/: README.md  __init__.py  filedeps.py  treeDescriptions[LLMcall].py
backend/repo_processorGitIngest/: filedeps.py  scraper_script.py
backend/routers/: __init__.py  solve_router.py
backend/schemas/: __init__.py  ai_solver.py
backend/solver/: .env.example  ARCHITECTURE_FLOW.md  DATABASE_SCHEMA_DESIGN.md  IMPLEMENTATION_COMPLETE.md  MSWEA.py  QUICK_REFERENCE.md  REFACTORING_SUMMARY.md  TESTING_VALIDATION_GUIDE.md  TRAJECTORY_STORAGE.md  [Check]miniAgent.py  __init__.py  agentScriptGen.py  ai_solver.py  config.yaml  config_utils.py  demo_script.py  e2b_standalone_demo.py  (+13 more)
(+395 files in other folders)
