[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yudai-v3"
version = "1.0.0"
description = "AI-powered code generation backend with mini-SWE-agent integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.7",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.2.0",
    "pydantic-core>=2.16.0",
    "gitingest>=0.1.4",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.10",
    "ghapi>=1.0.6",
    "httpx>=0.28.1",
    "black>=25.1.0",
    "ruff>=0.12.7",
    "pyjwt>=2.10.1",
    "cryptography>=45.0.5",
    "pgvector>=0.4.1",
    "numpy>=2.3.4",
    "sentence-transformers>=5.1.0",
    "torch>=2.9.0",
    "modal>=1.0.0",
    "pytest>=8.4.1",
 
]

[project.optional-dependencies]
dev = [
    "datasets>=2.16.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "rich>=13.7.0",
    "ruamel.yaml>=0.18.0",
    "tenacity>=8.2.0",
    "unidiff>=0.7.0",
    "simple-parsing>=0.1.0",
    "rich-argparse>=1.3.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-socketio>=5.3.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.1",
    "pydantic_settings>=2.2.0",
    "litellm>=1.30.0",
    "GitPython>=3.1.0",
    "ghapi>=1.0.0",
    "swe-rex>=1.2.0",
    "tabulate>=0.9.0",
    "textual>=1.0.0",
    "mike>=1.2.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-glightbox>=0.3.0",
    "mkdocs-include-markdown-plugin>=5.0.0",
    "mkdocstrings[python]>=0.24.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pipx>=1.2.0",
    "pre-commit>=3.6.0",
    "pytest-xdist>=3.5.0",
    "griffe-pydantic!=1.1.3",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true 
