[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yudai-v3-backend"
version = "3.0.0"
description = "AI-powered code generation backend with SWE-agent integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.1",
    "pydantic-settings==2.0.1",
    "pydantic-core==2.12.0",
    "pydantic-settings==2.0.1",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true 